# fde-hackathon-solution

./: .gitattributes  .gitconfig  .gitignore  .mcp.json  .pre-commit-config.yaml  LICENSE  README.md  SECURITY.md  docker-compose.yml  fde.code-workspace  ruff.toml
infra/common/libs/core/: pyproject.toml
infra/common/libs/core/tests/: test_naming.py  test_settings.py
infra/common/libs/core/tests/models/: test_stack_reference.py
infra/common/libs/utils/: pyproject.toml
infra/common/libs/utils/tests/: test_container_apps.py  test_docker.py  test_foundry.py  test_functions.py  test_roles.py  test_shared_acr.py  test_storage.py  test_vnet.py
infra/common/libs/utils/tests/models/: test_app_service_plan.py  test_azure_function.py  test_common_pulumi_config.py  test_easy_auth_config.py  test_role_assignment_info.py
py/: Makefile  _scenarios_data.json  pyproject.toml  pyrightconfig.json
py/apps/eval/: Dockerfile.mock  mock_tool_service.py  pyproject.toml  run_eval.py
py/apps/eval-generator/: pyproject.toml
py/apps/eval-generator/src/ms/eval_generator/: __main__.py  generator.py  models.py  reporters.py
py/apps/eval-generator/src/ms/eval_generator/scenarios/: __init__.py  _base.py  access_auth.py  data_cleanup.py  data_storage.py  edge_cases.py  general_inquiry.py  hardware.py  network.py  non_ticket.py  responsible_ai.py  security.py  software.py
py/apps/eval-generator/tests/: test_generator.py  test_models.py  test_scenarios.py
py/apps/evals/: pyproject.toml
py/apps/evals/src/ms/evals/: __main__.py  cli.py  constants.py  fixtures.py  generator.py  models.py  modifiers.py  validator.py
py/apps/evals/src/ms/evals/scenarios/: __init__.py  access_auth.py  data_cleanup.py  data_storage.py  general_inquiry.py  hardware.py  low_priority.py  network.py  not_support.py  registry.py  responsible_ai.py  security.py  software.py
py/apps/evals/tests/: test_generator.py
py/apps/sample/: .env.example  Dockerfile  client.py  exceptions.py  extract.py  main.py  models.py  orchestrate.py  pyproject.toml  settings.py  triage.py  utils.py
py/apps/sample/prompts/: __init__.py  extract.yaml  orchestrate.yaml  triage.yaml
py/apps/sample/tests/: conftest.py  test_exceptions.py  test_extract.py  test_http.py  test_orchestrate.py  test_settings.py  test_triage.py  test_utils.py
py/common/libs/fastapi/: README.md  pyproject.toml
py/common/libs/fastapi/tests/: test_api_request.py  test_api_response.py  test_create_fastapi_app.py  test_error_code_mapper.py  test_exception_handler.py
py/common/libs/fdebenchkit/: pyproject.toml
py/common/libs/models/: README.md  pyproject.toml
py/common/libs/models/tests/: test_base.py  test_dict_adapter.py
py/data/: README.md
py/data/task1/: input_schema.json  public_eval.json  public_eval_50.json  public_eval_50_gold.json
py/data/task2/: input_schema.json  output_schema.json  public_eval_50_gold.json
py/data/task3/: input_schema.json  output_schema.json  public_eval_50.json  public_eval_50_gold.json  public_eval_50_mock_responses.json
py/docs/data/tickets/: eval_data_cleanup.json  eval_responsible_ai.json
py/libs/eval/: pyproject.toml
py/libs/eval/src/ms/eval/: __init__.py  exporter.py  models.py
py/libs/eval/src/ms/eval/scenarios/: __init__.py  data_cleanup.py  responsible_ai.py
py/libs/eval/tests/: test_data_cleanup_eval.py  test_exporter.py  test_responsible_ai_eval.py
py/libs/evals/: README.md  pyproject.toml
py/libs/evals/src/evals/: __init__.py  export_json.py  models.py
py/libs/evals/src/evals/scenarios/: __init__.py  data_cleanup.py  responsible_ai.py
py/libs/evals/src/evals/validators/: __init__.py  data_cleanup.py  responsible_ai.py  schema.py
py/libs/evals/src/ms/_evals_migrated/: __init__.py  constants.py  export.py  models.py
py/libs/evals/src/ms/_evals_migrated/datasets/: __init__.py  data_cleanup.py  responsible_ai.py
py/libs/evals/src/ms/_evals_migrated/validators/: __init__.py  data_cleanup.py  structural.py
py/libs/evals/src/ms/evals/: __init__.py  cli.py  constants.py  exporter.py  generator.py  models.py  reporters.py  runner.py  scoring.py
py/libs/evals/src/ms/evals/datasets/: __init__.py  data_cleanup.py  responsible_ai.py
py/libs/evals/src/ms/evals/models/: __init__.py  scenario.py  ticket.py  triage.py
py/libs/evals/src/ms/evals/scenarios/: __init__.py  base.py  data_cleanup.py  data_storage.py  general_inquiry.py  hardware.py  network.py  not_support.py  registry.py  responsible_ai.py
py/libs/evals/src/ms/evals/scoring/: data_cleanup.py  responsible_ai.py
py/libs/evals/src/ms/evals/validators/: safety_validator.py  schema_validator.py
py/libs/evals/src/ms/evals_core/: __init__.py  __main__.py  cli.py  constants.py  datasets.py  eval_models.py  eval_runner.py  generate.py  generator.py  models.py  reporters.py  runner_cli.py  scoring.py
py/libs/evals/src/ms/evals_core/datasets/: loader.py  (+1 more)
py/libs/evals/tests/: conftest.py  test_content_safety_validator.py  test_data_cleanup.py  test_data_cleanup_advanced_scenarios.py  test_data_cleanup_extended.py  test_data_cleanup_extended_scenarios.py  test_data_cleanup_mastery_scenarios.py  test_data_cleanup_scenarios.py  test_data_cleanup_tickets.py  test_data_cleanup_validators.py  test_dataset_integrity.py  test_datasets.py  test_exporter.py  test_models.py  test_responsible_ai.py  test_responsible_ai_advanced_scenarios.py  test_responsible_ai_extended.py  test_responsible_ai_extended_scenarios.py  test_responsible_ai_mastery_scenarios.py  test_responsible_ai_scenarios.py  test_responsible_ai_tickets.py  test_responsible_ai_validator.py  test_responsible_ai_validators.py  test_robustness_validator.py  test_runner.py  test_runner_cli.py  test_scenario_registry.py  test_scenarios.py  test_schema_validation.py  test_schema_validator.py  test_scoring.py  test_scoring_data_cleanup.py  test_scoring_responsible_ai.py  test_structural_validators.py  test_validator_enhancements.py  test_validators.py
tools/github-actions-azure/: Pulumi.yml  README.md  __main__.py  pyproject.toml
tools/github-actions-azure/src/: roles.py  settings.py
(+313 files in other folders)
