[project]
name = "github-actions-azure"
version = "0.0.0"
requires-python = "==3.14.*"
dependencies = [
    "pulumi>=3.215.0",
    "pulumi-azure-native>=3.12.0",
    "pulumi-azuread>=6.8.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
]

[tool.pyright]
typeCheckingMode = "strict"

[tool.uv]
required-version = ">=0.9.17"
exclude-newer = "5 days"
