# Copyright (c) Microsoft. All rights reserved.
[project]
name = "ms-eval-generator"
version = "0.0.0"
description = "Evaluation dataset generator for IT ticket triage evals"
requires-python = ">=3.12"

dependencies = [
    "ms-common-models",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.1",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ms.eval_generator"
module-root = "src"
