[project]
name = "eval"
version = "0.0.0"
description = "FDEBench local eval harness"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["run_eval"]
