[project]
name = "ms-eval"
version = "0.0.0"
description = "Evaluation scenarios and test harness for data cleanup and responsible AI"
requires-python = "==3.12.*"

dependencies = [
    "ms-common-models",
    "pydantic>=2.8.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.1",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ms.eval"
module-root = "src"

[tool.uv.sources]
ms-common-models = { workspace = true }
