[project]
name = "infra-common-utils"
version = "0.0.0"
requires-python = "==3.12.*"
dependencies = [
    "infra-common-core",
    "pulumi>=3.191.0",
    "pulumi-azure-native>=3.14.0",
    "pulumi-azuread>=6.6.0",
    "pulumi-command>=1.1.3",
    "pulumi-docker-build>=0.0.15",
    "pulumi-random>=4.18.0",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
]

[tool.pyright]
typeCheckingMode = "strict"

ignore = [
    "tests/",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
required-version = ">=0.9.17"
exclude-newer = "5 days"

[tool.uv.build-backend]
module-root = "src"
module-name = "ms.infra.utils"

[tool.uv.sources]
infra-common-core = { path = "../core" }
