[project]
name = "ms-common-fastapi"
version = "0.0.0"
description = "Common FastApi resources for FDE"
requires-python = "==3.12.*"

dependencies = [
    "ms-common-models",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pyright>=1.1.407",
    "freezegun>=1.5.5",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ms.common.fastapi"
module-root = "src"

[tool.uv.sources]
ms-common-models = { workspace = true }
