[project]
name = "ms-common-models"
version = "0.0.0"
description = "Common Pydantic models and base classes for FDE"
requires-python = "==3.12.*"

dependencies = [
    "pydantic>=2.8.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.1",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "ms.common.models"
module-root = "src"
